--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
     <h5><marquee>Hello!! My Email Id: lavenababu@gmail.com</marquee></h5>
     <hr>
 
-    <img src="smiley.png" alt="img" width="200" height="200" style="float:right">
+    <img src="assests/smiley.png" alt="img" width="200" height="200" style="float:right">
 
     <h1>Personal Info</h1>
     <h4>&nbsp;&nbsp;TE IT Student in Don Bosco Institute Of Technology<br>
