--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Login</title>
 </head>
-<body style="background-image:url('bg.jpg');" id="login-pg">
+<!-- <body style="background-image:url('assets/bg.jpg');" id="login-pg"> -->
     <h2><center>Login Page</center></h2>
         <form name="input" action="html_form_action.asp" method="get"><center>
             Username: <input type="text" name="username"><br><br>
