--- a/academics.html
+++ b/academics.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Academics</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="academics-body">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Portfolio - <span style="color:rgb(3, 68, 68)"><b>Lavena Babu</b></span></a>
         
@@ -36,12 +36,16 @@
         </div>
       </nav>
 
-    <header id="academics-header">
+    <div class="academics-container">
+    <div class="academics-text">
+    <br>
+    <header id="header">
         <div>
-            <b><h1>Academics</h1></b>
+            <b><h3>Academics</h3></b>
         </div>
     </header>
-    <table border="2">
+    <br>
+    <table border="2" class="academics-table">
         <tr>
             <th>Semester</th>
             <th>Cgpa</th>
@@ -68,6 +72,53 @@
             <td>2022</td>
         </tr>
     </table>
+    <br><br>
+
+    <header id="header">
+        <div>
+            <b><h3>Technical Skills</h3></b>
+        </div>
+    </header>
+    <br>
+    <div class="academics-skills">
+    <div class="academics-left">
+    <br>
+    <ul>
+        <li>Web</li>
+        <ol>
+            <li>Java</li>
+            <li>Python</li>
+            <li>C++</li>
+            <li>C#</li>
+        </ol>
+        <li>Programming Skills</li>
+        <ol>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>Javascript</li>
+        </ol>
+    </ul>
+    </div>
+    <div class="academics-right">
+    <br>
+    <ul>
+        <li>Operating Systems</li>
+        <ol>
+            <li>Microsoft Windows</li>
+            <li>Linux</li>
+          </ol>
+        <li>Database</li>
+        <ol>
+            <li>MySql</li>
+            <li>PHPMyAdmin</li>
+          </ol>
+    </ul>
+    </div>
+    </div>
+    </div>
+    <br><br>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
