--- a/application.html
+++ b/application.html
@@ -6,34 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Application Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
+      <h4 id="clgaddress" style="text-align: center;"></h4>
         <hr><h2 style="text-align: center;">Application Form</h2><hr><br>
-    <form>
+    <form action="" id="registration">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputfirstname4">First Name</label>
-                <input type="text" class="form-control" placeholder="First name">
+                <input id="fname" type="text" class="form-control" placeholder="First name">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputlastname4">Last Name</label>
-                <input type="text" class="form-control" placeholder="Last name">
+                <input id="lname" type="text" class="form-control" placeholder="Last name">
             </div>
 
             <div class="form-group col-md-6">
                 <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <input id="email" type="email" class="form-control" placeholder="Email">
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword4">Password</label>
-                <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                <input id="pass" type="password" class="form-control" placeholder="Password">
             </div>
         </div>
         <div class="form-group">
           <label for="inputAddress">Address</label>
-          <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+          <input id="address" type="text" class="form-control" placeholder="1234 Main St">
         </div>
         <div class="form-row">
           <div class="form-group col-md-6">
@@ -42,7 +43,7 @@
           </div>
           <div class="form-group col-md-4">
             <label for="inputState">State</label>
-            <select id="inputState" class="form-control">
+            <select id="state" class="form-control">
               <option selected>Choose</option>
               <option>Andhra Pradesh</option>
               <option>Gujurat</option>
@@ -54,7 +55,7 @@
           </div>
           <div class="form-group col-md-2">
             <label for="inputZip">Zip</label>
-            <input type="text" class="form-control" id="inputZip">
+            <input type="text" class="form-control" id="zip">
           </div>
         </div>
         <div class="form-group">
@@ -65,8 +66,16 @@
             </label>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <button id="register" type="submit" class="btn btn-primary">Sign in</button>
+        <br><br>
+        <div>
+          <p>Your Form was submitted on: </p>
+          <div id="date"></div>
+        </div>
+        <br><br>
+
       </form>
     </div>
+    <script src="js/script.js"></script>
 </body>
 </html>
