--- a/login.html
+++ b/login.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Login</title>
 </head>
-<!-- <body style="background-image:url('assets/bg.jpg');" id="login-pg"> -->
-    <h2><center>Login Page</center></h2>
+<body class="login-body">
+    <div class="login-container">
+    <br>
+    <header id="header">
+    <h2>Login Page</h2>
+    </header>
         <form name="input" action="html_form_action.asp" method="get"><center>
             Username: <input type="text" name="username"><br><br>
             Password: <input type="password" name="password"><br><br>
@@ -17,4 +21,6 @@
         <div id="login-link">
             <center><a href="register.html"> Create a new account</a></center>
         </div>
+    </div>
 </body>
+</html>
